--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
    <h1>Home</h1>
-   <h2>Revision One</h2>
-   <p>The quick brown fox jump over the lazy dog</p>
+   <h2>Revision two</h2>
+   <p>The quick brown cow jump over the lazy dog</p>
 </body>
 </html>
