app001 first change

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Project</title>
 </head>
 <body>
-   <h1>Home</h1>
-   <h2>Revision two</h2>
+   <h1>Alt</h1>
+   <h2>Revision one</h2>
    <p>The quick brown cow jump over the lazy dog</p>
 </body>
 </html>
